Update version for 2025